finished responsive section breakers

--- a/coltermay.com/index.html
+++ b/coltermay.com/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
     <!-- FONT AWESOME -->
     <script src="https://kit.fontawesome.com/1b4e84012c.js" crossorigin="anonymous"></script>
-    <!-- GQUERY -->
+    <!-- JQUERY -->
     <script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
 
@@ -226,9 +226,15 @@
             </div>
         </div>
     </section>
-    <section class="breaker">
-    </section>
 
+    <!-- ======== SECTION DEVIDER ========= -->
+    <section class="breaker">
+        <blockquote class="quote">
+            A true artist is not one who is inspired, but one who inspires others.
+            <cite>&ndash;Salvador Dali</cite>
+        </blockquote>
+    </section>
+    
     <!-- ====== ART GRID ====== -->
     <section class="gallery" id="gallery">
         <div id="overlay"></div>
@@ -492,7 +498,7 @@
                     </div>
                     <div class="modal">
                         <div class="close">&#x2715;</div>
-                        <div class="long-vertical">
+                        <div class="modal-content">
                             <img src="./img/squirrel.jpeg" alt="Leon" class="frame">
                             <div class="modal__description">
                                 <span>12.03.2020</span>
@@ -728,9 +734,13 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="cover__line"></div> -->
     </section>
-    <section class="breaker2"></section>
+    <section class="breaker2">
+        <blockquote class="quote">
+            Artists are just children who refuse to put down their crayons. 
+            <cite>&ndash;Al Hirschfeld</cite>
+        </blockquote>
+    </section>
 
     <!-- ====== SECTION ABOUT ====== -->
     <section class="section__about" id="about">
@@ -738,17 +748,17 @@
         <div class="about">
             <div class="about__text">
                 <p>
-                    Born in Bozeman Montana, Colter was raised in a family that
-                    valued faith and wholesome activities. From his father he learned
-                    to love the outdoors, respect wildlife, and to live with commitment,
-                    consistency, and passion. From his mother, he was taught humor,
-                    kindness, and the value of finding joy in imagination. These roots
-                    provided the fertile beginnings for Colter's drive to become an artist.
-                    While the subject of his work primarily focuses on wildlife and landscapes,
-                    his ideation and philosophy behind his work are directly influenced by
-                    the values he learned and lives in his home. Colter is currently working
-                    on a BFA degree in painting at Brigham Young University-Idaho. He lives in
-                    Rexburg with his wife Bobbe and their two daughters Mindy and Emi.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus id officia
+                    exercitationem est minima neque delectus excepturi a. Asperiores atque 
+                    ipsum eligendi esse odio veniam, quasi laboriosam officiis eaque incidunt
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque, aliquid 
+                    illo at obcaecati deleniti nam, facere iusto magni sequi error beatae dolor 
+                    tenetur est eveniet voluptate quasi ad, eos pariatur debitis deserunt laboriosam 
+                    exercitationem possimus! Libero consectetur ipsum placeat ut fugit praesentium 
+                    vel harum velit assumenda officiis deleniti, provident nulla sint atque unde 
+                    nemo, perspiciatis dolores natus nobis doloribus iste non. Asperiores reiciendis 
+                    voluptatem cupiditate quidem dolorem sed, quibusdam a, eveniet libero molestiae 
+                    aperiam veritatis iusto dolorum, non corrupti. Hic est alias iure numquam ipsum
                 </p>
                 <div class="about__name">
                     <p>Wildlife ispired artist</p>
@@ -945,6 +955,7 @@
         <div class="statement__box">
             <h2 class="heading__secondary" data-text="04">Artist's statement</h2>
             <div class="artist__statement">
+                <img class="statement__img js-statement__img" src="./img/brushes-min.jpeg" alt=" May Family">
                 <div class="statement__content">
                     <p class="statement__text blockquote">
                         <strong>God left us the world unfinished for man to work his skill upon.</strong> He left
@@ -965,11 +976,15 @@
                         form of creation.
                     </p>
                 </div>
-                <img class="statement__img js-statement__img" src="./img/artist-state-min.png" alt=" May Family">
             </div>
         </div>
     </section>
-    <section class="breaker3"></section>
+    <section class="breaker3">
+        <blockquote class="quote">
+            The artist must train not only his eye but also his soul.<br>
+            <cite>&ndash;Wassily Kandinsky </cite>
+        </blockquote>
+    </section>
 
 
     <section class="section__contact" id="contact">
