--- a/coltermay.com/index.html
+++ b/coltermay.com/index.html
@@ -434,7 +434,7 @@
                     </div>
                     <div class="modal">
                         <div class="close">&#x2715;</div>
-                        <div class="long-horizontal">
+                        <div class="small-rectangular">
                             <img src="./img/mapache.jpg" alt="Mapache" class="frame">
                             <div class="modal__description">
                                 <span>12.03.2020</span>
