added animation and udated nav mobile

--- a/coltermay.com/index.html
+++ b/coltermay.com/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS STYLES -->
 
+    <!-- CSS STYLES -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/css/glide.core.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -28,9 +28,9 @@
     <header class="header" id="header">
         <!-- ====== NAVIGATION ====== -->
         <div class="navigation">
-            <a class="logo wow animated fadeInLeft" data-wow-duration="2s" data-wow-delay=".5s" href="#">J<span
+            <a class="logo"  href="#">J<span
                     class="active">R</span></a>
-            <div class="toggle-btn wow animated fadeInRight" data-wow-duration="2s" data-wow-delay=".5s">
+            <div class="toggle-btn">
                 <span class="one"></span>
                 <span class="two"></span>
             </div>
@@ -86,20 +86,24 @@
         </div>
         <!--slider arrow buttons-->
         <div class="slide__buttons">
-            <button class="wow animated fadeInLeft" data-wow-duration="2s" data-wow-delay=".5s" id="prev"><i class="fas fa-arrow-left"></i></button>
-            <button class="wow animated fadeInRight" data-wow-duration="2s" data-wow-delay=".5s" id="next"><i class="fas fa-arrow-right"></i></button>
+            <button class="wow animated fadeInLeft" data-wow-duration="2s" data-wow-delay=".5s" id="prev"><i
+                    class="fas fa-arrow-left"></i></button>
+            <button class="wow animated fadeInRight" data-wow-duration="2s" data-wow-delay=".5s" id="next"><i
+                    class="fas fa-arrow-right"></i></button>
         </div>
     </header>
 
     <!-- ====== SECTION ART ====== -->
     <section class="section__art" id="art">
-        <h2 class="heading__secondary wow animated fadeInDown"data-wow-duration="2s" data-wow-delay=".5s" data-text="01">My Work</h2>
+        <h2 class="heading__secondary wow animated fadeInDown" data-wow-duration="2s" data-wow-delay=".5s"
+            data-text="01">My Work</h2>
         <div class="main">
             <div class="col-4 wow slideInLeft" data-wow-duration="2s" data-wow-delay=".5s" data-text="01">
                 <h2>Featured Projects</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Ipsum minus beatae eius, iste aspernatur saepe voluptatibus et? Tempora, et atque.</p>
-                <a class="art__link wow animated fadeInUp" data-wow-duration="2s" data-wow-delay="1.8s" href="#gallery">see more</a>
+                <a class="art__link wow animated fadeInUp" data-wow-duration="2s" data-wow-delay="1.8s"
+                    href="#gallery">see more</a>
             </div>
 
             <!-- FEATURED PROJECTS SLIDER -->
@@ -234,12 +238,11 @@
     <!-- ======== SECTION DEVIDER ========= -->
     <section class="breaker">
         <div class="quote">
-            <blockquote class="wow animate fadeInUp"data-wow-duration="2s" data-wow-delay=".5s">
+            <blockquote class="wow animate fadeInUp" data-wow-duration="2s" data-wow-delay=".5s">
                 true artist is not one who is inspired, but one who inspires others.
                 <cite>&ndash;Salvador Dali</cite>
             </blockquote>
         </div>
-       
     </section>
 
     <!-- ====== ART GRID ====== -->
@@ -541,13 +544,13 @@
                 <div class="box">
                     <div class="thumbnail">
                         <div class="thumbnail-overlay"></div>
-                        <img class="thumbnail-img" src="./img/tiger-gallery.jpg" alt="Tiger">
+                        <img class="thumbnail-img" src="./img/tiger-gallery.jpeg" alt="Tiger">
                         <div class="read-more">Read more</div>
                     </div>
                     <div class="modal">
                         <div class="close">&#x2715;</div>
                         <div class="long-vertical">
-                            <img src="./img/tiger-gallery.jpg" alt="Tiger" class="frame">
+                            <img src="./img/tiger-gallery.jpeg" alt="Tiger" class="frame">
                             <div class="modal__description">
                                 <span>12.03.2020</span>
                                 <h3 class="heading__terceary mg-top-sm mg-bottom-sm">Title</h3>
@@ -749,12 +752,13 @@
                 Artists are just children who refuse to put down their crayons.
                 <cite>&ndash;Al Hirschfeld</cite>
             </blockquote>
-        </div>     
+        </div>
     </section>
 
     <!-- ====== SECTION ABOUT ====== -->
     <section class="section__about" id="about">
-        <h2 class="heading__secondary mg-top-lg wow animated fadeInDown" data-wow-duration="2s" data-wow-delay=".5s" data-text="02">About</h2>
+        <h2 class="heading__secondary mg-top-lg wow animated fadeInDown" data-wow-duration="2s" data-wow-delay=".5s"
+            data-text="02">About</h2>
         <div class="about">
             <div class="about__text wow animated fadeInLeft" data-wow-duration="2s" data-wow-delay=".5s">
                 <p>
@@ -770,7 +774,7 @@
                     voluptatem cupiditate quidem dolorem sed, quibusdam a, eveniet libero molestiae
                     aperiam veritatis iusto dolorum, non corrupti. Hic est alias iure numquam ipsum
                 </p>
-                <div class="about__name wow animated fadeInUp" data-wow-duration="2s" data-wow-delay="1.5s">
+                <div class="about__name wow animated fadeInUp" data-wow-duration="2s" data-wow-delay="1.2s">
                     <p>Wildlife ispired artist</p>
                     <h3 class="heading__terceary">Colter <span class="active">May</span></h3>
                     <?xml version="1.0" encoding="UTF-8"?>
@@ -858,8 +862,10 @@
         </div>
 
         <!-- ====== CV TIMELINE ====== -->
-        <h2 class=" heading__secondary wow animated fadeInDown" data-wow-duration="2s" data-wow-delay=".5s" id="cv" data-text="03">Curriculum Vitae</h2>
-        <h2 class="js-heading__secondary wow animated fadeInDown" data-wow-duration="2s" data-wow-delay=".5s" data-text="03">CV</h2>
+        <h2 class=" heading__secondary wow animated fadeInDown" data-wow-duration="2s" data-wow-delay=".5s" id="cv"
+            data-text="03">Curriculum Vitae</h2>
+        <h2 class="js-heading__secondary wow animated fadeInDown" data-wow-duration="2s" data-wow-delay=".5s"
+            data-text="03">CV</h2>
 
         <div class="cv">
             <div class="timeline">
@@ -868,17 +874,17 @@
                         <h2>Shows</h2>
                         <h3>2020</h3>
                         <ul>
-                            <li><q>Student Show Exhibit</q>, Brigham Young University - Idaho</li>
-                            <li><q>Introspection</q>, Yellowstone Teton Gallery, St. Anthony,
+                            <li><q>Lorem, ipsum dolor.</q>, Lorem ipsum dolor sit.</li>
+                            <li><q>Loremore.</q>, Lorem, ipsum dolor, St. Anthony,
                                 Idaho</li>
-                            <li><q>Winter Fine Arts Show</q>, Yellowstone Teton Gallery, St.
+                            <li><q>Lorem ipsum dolor sit.</q>, Lorem ipsum dolor sit., St.
                                 Anthony, Idaho</li>
-                            <li>Idaho Arts Council National Juried Exhibition, Idaho Falls, Idaho
+                            <li>Lorem ipsum dolor sit amet consectetur, Idaho Falls, Idaho
                             </li>
-                            <li>Art Grows Rexburg, Rexburg Idaho</li>
-                            <li>Shades of Red, Camelback Gallery</li>
-                            <li>Spring City Plein Air Competitio</li>
-                            <li> Business Card Show, J Kirk Richards Gallery, Provo Utah</li>
+                            <li>Lorem, ipsum dolor, Rexburg Idaho</li>
+                            <li>Lorem ipsum, dolor sit amet.</li>
+                            <li>Lorem ipsum dolor sit amet.</li>
+                            <li>Lorem, ipsum dolor, J Kirk Richards Gallery, Provo Utah</li>
                         </ul>
                     </div>
                 </div>
@@ -887,12 +893,11 @@
                         <h2 class="align-right">Shows</h2>
                         <h3 class="align-right">2018-2019</h3>
                         <ul class="align-right">
-                            <li class="li-dots-right"><q>Student Show Exhibit</q>, Brigham Young University - Idaho</li>
-                            <li class="li-dots-right"> Art Grows Rexburg, Rexburg Idaho</li>
-                            <li class="li-dots-right"><q>Book of Mormon Art Show</q>Special Collections & Archives,
-                                Brigham Young University -
-                                Idaho</li>
-                            <li class="li-dots-right"> Student Art Show, Southern Virginia University</li>
+                            <li class="li-dots-right"><q>Lorem, ipsum dolor.</q>, Lorem, ipsum dolor. - Idaho</li>
+                            <li class="li-dots-right"> Lorem, ipsum dolor, Rexburg Idaho</li>
+                            <li class="li-dots-right"><q>Lorem ipsum dolor sit amet.</q>Lorem, ipsum & Archives,
+                                Lorem, ipsum dolor - Idaho</li>
+                            <li class="li-dots-right"> Lorem, ipsum dolor, Lorem, ipsum dolor.</li>
                         </ul>
                     </div>
                 </div>
@@ -901,9 +906,9 @@
                         <h2>Awards</h2>
                         <h3>2020-2021</h3>
                         <ul>
-                            <li>Finalist, Camelback Gallery, Shades of Red Show</li>
-                            <li>First Place Amateur, Art Grows Rexburg</li>
-                            <li>Art Talent Award Scholarship, Brigham Young University - Idaho
+                            <li>Lorem, Lorem, ipsum, Lorem ipsum dolor sit.</li>
+                            <li>Lorem, ipsum dolor, Lorem, ipsum dolor.</li>
+                            <li>Lorem ipsum dolor sit, Lorem ipsum dolor sit - Idaho
                             </li>
                         </ul>
                     </div>
@@ -913,12 +918,11 @@
                         <h2 class="align-right">Awards</h2>
                         <h3 class="align-right">2019</h3>
                         <ul class="align-right">
-                            <li class="li-dots-right">Cover Award, The Review, Southern Virginia University Publication,
+                            <li class="li-dots-right">Lorem ipsum, dolor sit, amet consectetur adipisicing elit.,
                                 Release, Cyanotype</li>
-                            <li class="li-dots-right"> Reserve Grand Champion, Madison County Fair</li>
-                            <li class="li-dots-right">Best in Catagory, Book Arts, “Book of Mormon Art Show” Special
-                                Collections & Archives,
-                                Brigham Young University - Idaho</li>
+                            <li class="li-dots-right"> Lorem ipsum dolor sit amet consectetur.</li>
+                            <li class="li-dots-right">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                                Unde, aliquid impedit. Lorem, ipsum.</li>
                         </ul>
                     </div>
                 </div>
@@ -927,11 +931,10 @@
                         <h2>Awards</h2>
                         <h3>2018</h3>
                         <ul>
-                            <li>Best in Show, Utah County State Fair, <q>Pastel Horse</q> oil
+                            <li>Lorem ipsum dolor sit amet consectetur adipisicing, <q>Lorem, ipsum.</q> oil
                                 pastel</li>
-                            <li>People’s Choice Award, Southern Virginia University Student Art
-                                Show,
-                                <q>My Fish: Dog</q> Ink and colored pencil</li>
+                            <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed.
+                                <q>Lorem, ipsum: Dog</q>Lorem ipsum dolor sit.</li>
                         </ul>
                     </div>
                 </div>
@@ -940,7 +943,7 @@
                         <h2 class="align-right">Education</h2>
                         <h3 class="align-right">2019-present</h3>
                         <ul class="align-right">
-                            <li class="li-dots-right">B.F.A. Painting, Brigham Young University - Idaho, Rexburg, Idaho
+                            <li class="li-dots-right">B.F.A. lorem, Lorem ipsum dolor sit amet consectetur.
                             </li>
                         </ul>
                     </div>
@@ -950,7 +953,7 @@
                         <h2>Education</h2>
                         <h3>2017-2018</h3>
                         <ul>
-                            <li> Southern Virginia University, Art Major, Concentration Graphic Design </li>
+                            <li> Lorem, ipsum dolor, Lorem ipsum dolor sit amet.x</li>
                         </ul>
                     </div>
                 </div>
@@ -963,7 +966,8 @@
                 allowfullscreen></iframe>
         </div>
         <div class="statement__box">
-            <h2 class="heading__secondary wow animated fadeInDown" data-wow-duration="2s" data-wow-delay=".5s" data-text="04">Artist's statement</h2>
+            <h2 class="heading__secondary wow animated fadeInDown" data-wow-duration="2s" data-wow-delay=".5s"
+                data-text="04">Artist's statement</h2>
             <div class="artist__statement">
                 <img class="statement__img js-statement__img" src="./img/brushes-min.jpeg" alt=" May Family">
                 <div class="statement__content wow animate fadeInRight" data-wow-duration="2s" data-wow-delay=".5s">
@@ -978,34 +982,39 @@
                     </p>
                     <br>
                     <p class="statement__text">
-                        For me, the process of becoming an artist has involved intense observation
-                        and study of the works of the master artist: God. I deeply desire to
-                        understand what inspires me and why. My work is a personal journey to understanding
-                        how I relate to the creations around me. Painting has given me a way not only to
-                        share my personal inspiration but to also connect with my creator through a visual
-                        form of creation.
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque, aliquid
+                        illo at obcaecati deleniti nam, facere iusto magni sequi error beatae dolor
+                        tenetur est eveniet voluptate quasi ad, eos pariatur debitis deserunt laboriosam
+                        exercitationem possimus! Libero consectetur ipsum placeat ut fugit praesentium
+                        vel harum velit assumenda officiis deleniti, provident nulla sint atque unde
+                        nemo, perspiciatis dolores natus nobis doloribus iste non. Asperiores reiciendis
+                        voluptatem cupiditate quidem dolorem sed, quibusdam a, eveniet libero molestiae
+                        aperiam veritatis iusto dolorum, non corrupti.
                     </p>
                 </div>
             </div>
         </div>
     </section>
+
     <section class="breaker3">
         <div class="quote">
             <blockquote class="wow animate fadeInUp" data-wow-duration="2s" data-wow-delay=".5s">
                 <blockquote class="">
-                The artist must train not only his eye but also his soul.<br>
-                <cite>&ndash;Wassily Kandinsky </cite>
-            </blockquote>
-        </div>   
+                    The artist must train not only his eye but also his soul.<br>
+                    <cite>&ndash;Wassily Kandinsky </cite>
+                </blockquote>
+        </div>
     </section>
 
-
+    <!-- ====== SECTION CONTACT ====== -->
     <section class="section__contact" id="contact">
-        <h2 class="heading__secondary wow animated fadeInDown" data-wow-duration="2s" data-wow-delay=".5s" data-text="05">Contact</h2>
+        <h2 class="heading__secondary wow animated fadeInDown" data-wow-duration="2s" data-wow-delay=".5s"
+            data-text="05">Contact</h2>
         <div class="contact__box">
             <div class="contact__container">
                 <div class="contact__info wow animated fadeInLeft" data-wow-duration="2s" data-wow-delay=".5s">
                     <div>
+                        <!--contact information-->
                         <h2>Contact info</h2>
                         <ul class="info">
                             <li>
@@ -1024,6 +1033,7 @@
                             </li>
                         </ul>
                     </div>
+                    <!--social media icons-->
                     <ul class="contact__info--icons">
                         <li><a href="#"><i class="fab fa-facebook-square fa-2x"></i></a></li>
                         <li><a href="#"><i class="fab fa-instagram-square fa-2x"></i></a> </li>
@@ -1033,6 +1043,7 @@
                 </div>
                 <div class="contact__form wow animated fadeInRight" data-wow-duration="2s" data-wow-delay=".5s">
                     <h3 class="heading__terceary black">Contact Colter May</h3>
+                    <!--contact form-->
                     <div class="form__content">
                         <div class="input__box w50">
                             <input type="text" name="firsN" placeholder="First Name">
@@ -1049,7 +1060,7 @@
                         <div class="input__box w100">
                             <textarea name="message" placeholder="Message"></textarea>
                         </div>
-                        <div class="input__box w50 wow animated fadeInUp" data-wow-duration="2s" data-wow-delay="2.3s">
+                        <div class="input__box w50 wow animated fadeInUp" data-wow-duration="2s" data-wow-delay="2s">
                             <input type="submit" value="send">
                         </div>
                     </div>
@@ -1058,6 +1069,7 @@
         </div>
     </section>
 
+    <!-- ====== FOOTER ====== -->
     <footer class="footer">
         <p class="copyright">copyright &copy; 2021 by jaimewebdev.com</p>
     </footer>
@@ -1070,9 +1082,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/glide.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
 <script src="./js/main.js"></script>
-
-
-<!-- <script src="//code.jquery.com/jquery-1.11.0.min.js"></script> -->
-<!-- <script src="https://code.jquery.com/jquery-3.3.1.js"></script> -->
 
 </html>
