modified nav button

--- a/coltermay.com/index.html
+++ b/coltermay.com/index.html
@@ -33,6 +33,7 @@
             <div class="toggle-btn">
                 <span class="one"></span>
                 <span class="two"></span>
+                <span class="menu__btn">menu</span>
             </div>
             <nav class="menu">
                 <div class="data">
