--- a/jaimewebdev.com/index.html
+++ b/jaimewebdev.com/index.html
@@ -643,50 +643,50 @@
                     </div>
                 </div>
 
-                <!-- Portfolio Project -->
+                <!-- Coltermay Project -->
                 <figure class="project-content wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
-                    <img src="./img/projects/portfolio.jpg" alt="Portfolio" />
+                    <img src="./img/projects/coltermay.png" alt="Colter May" />
                     <div class="content-overlay"></div>
                     <div class="language english active">
                         <figcaption class="project-content__text">
                             <p class="project-content__text-sub-title">Website</p>
-                            <h2 class="project-content__text-title">Jaime Rosales</h2>
-                            <a href="#portfolio-popup" class="project-content__link">View Project</a>
+                            <h2 class="project-content__text-title">Colter May</h2>
+                            <a href="#coltermay-popup" class="project-content__link">View Project</a>
                         </figcaption>
                     </div>
                     <div class="language spanish">
                         <figcaption class="project-content__text">
                             <p class="project-content__text-sub-title">Sitio Personal</p>
-                            <h2 class="project-content__text-title">Jaime Rosales</h2>
-                            <a href="#portfolio-popup" class="project-content__link">Ver Proyecto</a>
+                            <h2 class="project-content__text-title">Colter May</h2>
+                            <a href="#coltermay-popup" class="project-content__link">Ver Proyecto</a>
                         </figcaption>
                     </div>
 
                 </figure>
 
-                <!-- Portfolio popup  -->
-                <div class="popup" id="portfolio-popup">
+                <!-- Coltermay popup  -->
+                <div class="popup" id="coltermay-popup">
                     <div class="language english active">
                         <div class="popup__content">
                             <div class="popup__left">
-                                <img src="./img/projects/portfolio.png" alt="Natours photo" class="popup__img">
+                                <img src="./img/projects/coltermay2.png" alt="Colter May" class="popup__img">
                             </div>
                             <div class="popup__right">
-                                <a href="#portfolio" class="popup__close portfolio-color">&times;</a>
-                                <h3 class="popup-heading portfolio-color">Project type</h3>
+                                <a href="#portfolio" class="popup__close coltermay-color">&times;</a>
+                                <h3 class="popup-heading coltermay-color">Project type</h3>
                                 <p class="popup__text">Personal Website</p>
-                                <h3 class="popup-heading portfolio-color">Project Description</h3>
+                                <h3 class="popup-heading coltermay-color">Project Description</h3>
                                 <p class="popup__text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus
                                     ipsum hic magni
                                     cum minima quisquam a amet aut excepturi consequatur sit necessitatibus.
                                 </p>
 
-                                <h3 class="popup-heading portfolio-color">Technologies Used</h3>
+                                <h3 class="popup-heading coltermay-color">Technologies Used</h3>
                                 <p class="popup__text">
                                     HTML5, CSS3, Custom Grid Layout, JavaScript, Sass, Git, npm
                                 </p>
                                 <div class="popup-links">
-                                    <a href="https://rosajaim.github.io/portfolio/portfolio.com/index.html"
+                                    <a href="https://rosajaim.github.io/portfolio/coltermay.com/index.html"
                                         target="_blank" class="btn-popup">Visit website</a>
                                     <a href="https://github.com/rosajaim/portfolio/tree/gh-pages/natours.com"
                                         target="_blank" class="btn-popup">Source code</a>
@@ -697,19 +697,19 @@
                     <div class="language spanish">
                         <div class="popup__content">
                             <div class="popup__left">
-                                <img src="./img/projects/portfolio.png" alt="Natours photo" class="popup__img">
+                                <img src="./img/projects/portfolio.png" alt="Colter May " class="popup__img">
                             </div>
                             <div class="popup__right">
                                 <a href="#portfolio" class="popup__close">&times;</a>
-                                <h3 class="popup-heading natours-color">Tipon de proyecto</h3>
+                                <h3 class="popup-heading coltermay-color">Tipon de proyecto</h3>
                                 <p class="popup__text">Sitio Personal</p>
-                                <h3 class="popup-heading natours-color">Project Description</h3>
+                                <h3 class="popup-heading coltermay-color">Project Description</h3>
                                 <p class="popup__text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus
                                     ipsum hic magni
                                     cum minima quisquam a amet aut excepturi consequatur sit necessitatibus.
                                 </p>
 
-                                <h3 class="popup-heading natours-color">Tecnologias usdas</h3>
+                                <h3 class="popup-heading coltermay-color">Tecnologias usdas</h3>
                                 <p class="popup__text">
                                     HTML5, CSS3, Custom Grid Layout, JavaScript, Sass, Git, npm
                                 </p>
